Fixes MCKIN-3105 Top align weeks

--- a/static/scss/courses/progress-v2.scss
+++ b/static/scss/courses/progress-v2.scss
@@ -24,6 +24,7 @@
               color: $mckinsey-dark-grey;
               font-style: italic;
               text-transform: uppercase;
+              vertical-align: top;
               @include font-spec(12, 600);
 
               span {
